feat(nano-embed): Implement LLM2Vec with LoRA for text embedding
This commit transforms the nanochat repository into nano-embed, a project focused on text embedding following the LLM2Vec paper's methodology, including LoRA integration.

Key changes include:

-   **Core Model Modifications**:
    -   Implemented bidirectional attention in  via a  configuration flag.
    -   Integrated LoRA (Low-Rank Adaptation) layers into the  model's , , and  modules, enabling parameter-efficient fine-tuning.
    -   Modified the  method to optionally return embeddings and to correctly handle the MNTP objective's shifted logits.

-   **Two-Stage Training Pipeline**:
    -   Introduced  for the Masked Next Token Prediction (MNTP) training stage, including its specific loss calculation.
    -   Created  with a SimCSE-style contrastive loss function.
    -   Developed  for the unsupervised contrastive learning (SimCSE) stage, incorporating the two-pass model execution for dropout-based augmentation.
    -   Added  with , , and  utilities.
    -   Created  to merge LoRA weights from the MNTP stage into the base model.
    -   Orchestrated the entire two-stage training process (MNTP -> LoRA Merge -> Contrastive) in , including dynamic checkpoint loading.

-   **Data Handling & Evaluation**:
    -   Enhanced  to support MNTP by adding a  function and integrating a  parameter.
    -   Updated  to leverage the MTEB (Massive Text Embedding Benchmark) for comprehensive evaluation of the generated embeddings, including a wrapper class () for model compatibility.
    -   Added  to facilitate downloading the  base model from Hugging Face.

-   **Project Configuration & Utilities**:
    -   Renamed the project from 'nanochat' to 'nano-embed' in  and updated its description.
    -   Updated  with new dependencies (, , ).
    -   Corrected module import paths ( to ) and branding in .
    -   Improved platform-specific dependency installation in  for macOS (CPU/MPS) and Linux (GPU).
    -   Integra

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "nanochat"
+name = "nano-embed"
 version = "0.1.0"
-description = "the minimal full-stack ChatGPT clone"
+description = "the minimal full-stack embedding model"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -16,6 +16,11 @@ dependencies = [
     "torch>=2.8.0",
     "uvicorn>=0.36.0",
     "wandb>=0.21.3",
+    "scikit-learn>=1.0.0",
+    "requests",
+    "mteb",
+    "tqdm",
+    "pyarrow",
 ]
 
 [build-system]
@@ -25,7 +30,7 @@ build-backend = "maturin"
 [tool.maturin]
 module-name = "rustbpe"
 bindings = "pyo3"
-python-source = "."
+python-source = "nano_embed"
 manifest-path = "rustbpe/Cargo.toml"
 
 [dependency-groups]
